[project]
name = "semantic-markdown-parser"
version = "1.0.0"
description = ""
authors = [
    {name = "Talha J Siam <talha@askturing.ai>"}
]

readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = [ "dependencies" ]
package-mode = false

[tool.poetry.dependencies]
llama-index = "^0.12.10"
tokenizers = "^0.21.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
